//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role Role [not null]
  page Page [not null]
  comment Comment [not null]
}

Table Page {
  id String [pk]
  name String [unique, not null]
  slug String [not null]
  isPublic Boolean [not null, default: false]
  definition String [not null]
  user User [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  comment Comment [not null]
}

Table Comment {
  id String [pk]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  page Page [not null]
  pageId String [not null]
}

Enum Role {
  ADMIN
  DEVELOPER
  OPERATOR
}

Ref: Page.userId > User.id

Ref: Comment.userId > User.id

Ref: Comment.pageId > Page.id